# grpc

./: README.md  client.py  mypy.ini  pyproject.toml  server.py
.run/: Run app.run.xml  grpc_tools.protoc.run.xml  marketplace_Dockerfile.run.xml  recommendations_Dockerfile.run.xml  server.run.xml
marketplace/: Dockerfile  marketplace_integration_test.py
recommendations/: Dockerfile  recommendations.py  recommendations_pb2.pyi  recommendations_test.py
